Fix buggy scroll behavior on mobile
Add sponsor
Change news article layout

--- a/src/styles/global.styl
+++ b/src/styles/global.styl
@@ -8,6 +8,7 @@ body
 html
     font-size 10px
     -webkit-tap-highlight-color rgba(0, 0, 0, 0)
+    scroll-padding 46px 0 0 0
 
 body
     margin 0
@@ -115,11 +116,11 @@ ul
 
 .cover-heading
     margin-bottom 15px
-    font-size 4vh
+    font-size 4vmin
 
 .cover-subheading
     margin-top 25px
-    color rgba(96, 96, 97, 0.9)
+    color rgba(70,70,70,0.8)
     font-style italic
     font-size 3vmin
     text-align center
